<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/characterDetailsProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/characterDetailsError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/emptyState"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_baseline_broken_image_24" />

        <TextView
            android:id="@+id/emptyStateMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/character_details_connection_error_message"
            android:textAppearance="?attr/textAppearanceCaption" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/characterDetailsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/characterDetailsAvatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/characterDetailsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="?attr/textAppearanceHeadline3"
                app:layout_constraintTop_toBottomOf="@id/characterDetailsAvatar"
                tools:text="Rick Sanchez" />

            <TextView
                android:id="@+id/characterDetailsDateCreatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:text="@string/character_details_date_label"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintStart_toStartOf="@id/characterDetailsDateCreated"
                app:layout_constraintTop_toBottomOf="@id/characterDetailsName" />

            <TextView
                android:id="@+id/characterDetailsDateCreated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toBottomOf="@id/characterDetailsStatus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/characterDetailsStatus"
                tools:text="2017-11-04 18:48:46" />

            <TextView
                android:id="@+id/characterDetailsStatusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:text="@string/character_details_status_label"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characterDetailsName" />

            <TextView
                android:id="@+id/characterDetailsStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characterDetailsStatusLabel"
                tools:text="Alive" />

            <TextView
                android:id="@+id/characterDetailsSpeciesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/character_details_species_label"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characterDetailsStatus" />

            <TextView
                android:id="@+id/characterDetailsSpecies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characterDetailsSpeciesLabel"
                tools:text="Human" />

            <TextView
                android:id="@+id/characterDetailsGenderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/character_details_gender_label"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characterDetailsSpecies" />

            <TextView
                android:id="@+id/characterDetailsGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characterDetailsGenderLabel"
                tools:text="Male" />

            <TextView
                android:id="@+id/characterDetailsLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/character_details_location_label"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characterDetailsGender" />

            <TextView
                android:id="@+id/characterDetailsLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characterDetailsLocationLabel"
                tools:text="Earth" />

            <TextView
                android:id="@+id/characterDetailsLastLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/character_details_last_location_label"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characterDetailsLocation" />

            <TextView
                android:id="@+id/characterDetailsLastLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/characterDetailsLastLocationLabel"
                tools:text="Earth" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>
